src/test/ui/moves/moves-based-on-type-capture-clause-bad.stderr
error[E0382]: use of moved value: `x`
  --> $DIR/moves-based-on-type-capture-clause-bad.rs:8:20
   |
LL |     thread::spawn(move|| {
   |                   ------ value moved (into closure) here
...
LL |     println!("{}", x); //~ ERROR use of moved value
   |                    ^ value used here after move
   |
   = note: move occurs because `x` has type `std::string::String`, which does not implement the `Copy` trait

error: aborting due to previous error

For more information about this error, try `rustc --explain E0382`.
